--- a/PPO/requirements.txt
+++ b/PPO/requirements.txt
@@ -1,12 +1,12 @@
-numpy==1.21.0
-numpydoc==1.5.0
-torch==2.0.0
-torchaudio==2.0.1
-torchvision== 0.15.1
-pygame==2.1.0
-gym==0.26.2
-gym-notices==0.0.6
-matplotlib==3.5.1
-matplotlib-inline==0.1.3
-tqdm==4.62.3
-opencv-python==4.4.0.46
+numpy
+numpydoc
+torch
+torchaudio
+torchvision
+pygame
+gym
+gym-notices
+matplotlib
+matplotlib-inline
+tqdm
+opencv-python
